# langgraph-fabric-data-agent

./: .env.api.example  .env.console.example  .env.example  .env.m365.example  .gitignore  .pre-commit-config.yaml  README.md  langgraph-fabric-data-agent.code-workspace  pyproject.toml
.github/: copilot-instructions.md
.github/instructions/: python.instructions.md  tests.instructions.md
.github/workflows/: ci.yml
appPackage/: manifest.sample.json
docs/: api-guide.md  app-registration.md  architecture.md  azure-bot-service.md  console-guide.md  m365-guide.md  vscode-tasks.md
examples/: api_client_with_api_token.py
src/langgraph_fabric_data_agent/: __init__.py  api.py  auth.py  config.py  console.py  fabric_mcp_client.py  graph.py  hosted.py  llm.py  logging_setup.py  main_api.py  main_console.py  main_hosted.py  orchestrator.py  tools.py
src/langgraph_fabric_data_agent/api/: __init__.py  app.py
src/langgraph_fabric_data_agent/cli/: __init__.py  console.py
src/langgraph_fabric_data_agent/core/: __init__.py  config.py  logging.py
src/langgraph_fabric_data_agent/fabric/: __init__.py  auth.py  mcp_client.py  tools.py
src/langgraph_fabric_data_agent/graph/: __init__.py  orchestrator.py
src/langgraph_fabric_data_agent/hosted/: __init__.py  app.py  oauth.py  runtime.py
src/langgraph_fabric_data_agent/llm/: __init__.py  factory.py
tests/integration/: test_streaming_api.py
tests/unit/: conftest.py  test_api.py  test_auth.py  test_config.py  test_fabric_mcp_client.py  test_fabric_tools.py  test_hosted_app.py  test_llm.py  test_logging_setup.py  test_main_hosted.py  test_orchestrator.py
