[project]
name = "langgraph-fabric-data-agent"
version = "0.1.0"
description = "LangGraph sample agent that calls a Fabric Data Agent over MCP"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "azure-identity==1.25.3",
  "fastapi==0.135.3",
  "httpx==0.28.1",
  "langchain-core==1.2.24",
  "langchain-openai==1.1.12",
  "langgraph==1.1.4",
  "mcp==1.26.0",
  "microsoft-agents-activity==0.8.0",
  "microsoft-agents-authentication-msal==0.8.0",
  "microsoft-agents-hosting-aiohttp==0.8.0",
  "microsoft-agents-hosting-core==0.8.0",
  "pydantic==2.12.5",
  "pydantic-settings==2.13.1",
  "python-dotenv==1.2.2",
  "typer==0.24.1",
  "uvicorn==0.42.0",
]

[project.optional-dependencies]
dev = [
  "pytest==9.0.2",
  "pytest-asyncio==1.3.0",
  "pytest-cov==7.1.0",
  "respx==0.22.0",
  "ruff==0.15.8",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "ASYNC", "N", "RUF"]
ignore = ["E501"]

[tool.pytest.ini_options]
addopts = "-q"
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.uv]
package = true

[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"
