[project]
name = "langgraph-fabric-workspace"
version = "0.0.0"
description = "LangGraph Fabric Data Agent monorepo workspace"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest==9.0.3",
  "pytest-asyncio==1.3.0",
  "pytest-cov==7.1.0",
  "respx==0.22.0",
  "ruff==0.15.8",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "ASYNC", "N", "RUF"]
ignore = ["E501"]

[tool.pytest.ini_options]
addopts = "-q --import-mode=importlib"
asyncio_mode = "auto"
testpaths = [
  "packages/langgraph-fabric-core/tests",
  "packages/langgraph-fabric-api/tests",
  "packages/langgraph-fabric-console/tests",
  "packages/langgraph-fabric-m365/tests",
]

[tool.uv]
package = false

[tool.uv.workspace]
members = ["packages/*"]

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
]
